Revision history for Unix::SetuidWrapper

          - Release File::UnixAuth to CPAN
          - Skip tests on unsupported platforms
          - Fixed creating and removing t/secure
            No left over root owned directory
          - Shaved the Yak
          - Added badges and public repos
          - Secure directory passed via binary not from config
          - Added comments to example
          - Shaved the Yak
          - Untainted_cmd now returns a list
          - Updated prereqs
          - Example working
          - Builds role map

0.1.1     2015-05-05 13:22:37
          - Added project files to master branch
