@@ -1,10 +1,10 @@
 #!/usr/bin/env perl
 
 # Run once as root with
-#   perl examples/admin -nc init_suid_wrapper
+#   perl examples/admin -c init-suid-wrapper
 # Thereafter run as a normal user
-#   perl examples/admin -nc test_cmd
-#   perl examples/admin -nc not_allowed
+#   perl examples/admin -c test-cmd
+#   perl examples/admin -c not-allowed
 
 use lib;
 use strict;
